Code/syntax.output
State 25 conflicts: 1 shift/reduce
State 26 conflicts: 1 shift/reduce
State 31 conflicts: 1 shift/reduce
State 42 conflicts: 1 shift/reduce
State 57 conflicts: 1 shift/reduce
State 60 conflicts: 1 shift/reduce
State 69 conflicts: 1 shift/reduce
State 84 conflicts: 2 shift/reduce
State 86 conflicts: 2 shift/reduce
State 88 conflicts: 2 shift/reduce
State 116 conflicts: 2 shift/reduce
State 127 conflicts: 2 shift/reduce
State 129 conflicts: 2 shift/reduce
State 131 conflicts: 2 shift/reduce
State 133 conflicts: 2 shift/reduce
State 135 conflicts: 2 shift/reduce
State 137 conflicts: 2 shift/reduce
State 139 conflicts: 2 shift/reduce
State 141 conflicts: 2 shift/reduce
State 157 conflicts: 1 shift/reduce, 12 reduce/reduce
State 160 conflicts: 1 shift/reduce, 12 reduce/reduce
State 167 conflicts: 1 shift/reduce, 12 reduce/reduce


Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: %empty
    3           | ExtDef ExtDefList

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | Specifier error

    8 ExtDecList: VarDec
    9           | VarDec COMMA ExtDecList

   10 Specifier: TYPE
   11          | StructSpecifier

   12 StructSpecifier: STRUCT OptTag LC DefList RC
   13                | STRUCT Tag

   14 OptTag: %empty
   15       | ID

   16 Tag: ID

   17 VarDec: ID
   18       | VarDec LB INT RB
   19       | VarDec LB error RB

   20 FunDec: ID LP VarList RP
   21       | ID LP RP
   22       | ID error VarList RP
   23       | ID LP VarList error

   24 VarList: ParamDec COMMA VarList
   25        | ParamDec

   26 ParamDec: Specifier VarDec

   27 CompSt: LC DefList StmtList RC
   28       | error DefList StmtList RC
   29       | LC DefList StmtList error

   30 StmtList: %empty
   31         | Stmt StmtList

   32 Stmt: Exp SEMI
   33     | Exp error
   34     | error SEMI
   35     | CompSt
   36     | RETURN Exp SEMI
   37     | RETURN Exp error
   38     | IF LP Exp RP Stmt
   39     | IF LP error RP Stmt
   40     | IF LP Exp RP error
   41     | IF LP Exp RP Stmt ELSE Stmt
   42     | IF LP error RP Stmt ELSE Stmt
   43     | IF LP Exp RP error ELSE Stmt
   44     | IF LP Exp RP Stmt ELSE error
   45     | WHILE LP Exp RP Stmt
   46     | WHILE LP error RP Stmt
   47     | WHILE LP Exp RP error

   48 DefList: %empty
   49        | Def DefList

   50 Def: Specifier DecList SEMI
   51    | Specifier error SEMI
   52    | error SEMI

   53 DecList: Dec
   54        | Dec COMMA DecList
   55        | error COMMA DecList

   56 Dec: VarDec
   57    | VarDec ASSIGNOP Exp
   58    | error ASSIGNOP Exp

   59 Exp: Exp ASSIGNOP Exp
   60    | Exp AND Exp
   61    | Exp OR Exp
   62    | Exp RELOP Exp
   63    | Exp PLUS Exp
   64    | Exp MINUS Exp
   65    | Exp STAR Exp
   66    | Exp DIV Exp
   67    | LP Exp RP
   68    | MINUS Exp
   69    | NOT Exp
   70    | ID LP Args RP
   71    | ID LP RP
   72    | Exp LB Exp RB
   73    | Exp DOT ID
   74    | ID
   75    | INT
   76    | FLOAT
   77    | Exp ASSIGNOP error
   78    | Exp AND error
   79    | Exp OR error
   80    | Exp RELOP error
   81    | Exp PLUS error
   82    | Exp MINUS error
   83    | Exp STAR error
   84    | Exp DIV error
   85    | MINUS error
   86    | NOT error
   87    | error RP
   88    | LP error
   89    | Exp LB error RB
   90    | error LB Exp RB
   91    | ID error
   92    | ID LP error

   93 Args: Exp COMMA Args
   94     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 7 19 22 23 28 29 33 34 37 39 40 42 43 44 46 47 51 52 55
    58 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92
INT (258) 18 75
FLOAT (259) 76
ID (260) 15 16 17 20 21 22 23 70 71 73 74 91 92
SEMI (261) 4 5 32 34 36 50 51 52
COMMA (262) 9 24 54 55 93
ASSIGNOP (263) 57 58 59 77
RELOP (264) 62 80
PLUS (265) 63 81
MINUS (266) 64 68 82 85
STAR (267) 65 83
DIV (268) 66 84
AND (269) 60 78
OR (270) 61 79
NOT (271) 69 86
DOT (272) 73
TYPE (273) 10
LP (274) 20 21 23 38 39 40 41 42 43 44 45 46 47 67 70 71 88 92
RP (275) 20 21 22 38 39 40 41 42 43 44 45 46 47 67 70 71 87
LB (276) 18 19 72 89 90
RB (277) 18 19 72 89 90
LC (278) 12 27 29
RC (279) 12 27 28
STRUCT (280) 12 13
RETURN (281) 36 37
IF (282) 38 39 40 41 42 43 44
ELSE (283) 41 42 43 44
WHILE (284) 45 46 47
LOWER_THAN_ELSE (285)


Nonterminals, with rules where they appear

$accept (31)
    on left: 0
Program (32)
    on left: 1, on right: 0
ExtDefList (33)
    on left: 2 3, on right: 1 3
ExtDef (34)
    on left: 4 5 6 7, on right: 3
ExtDecList (35)
    on left: 8 9, on right: 4 9
Specifier (36)
    on left: 10 11, on right: 4 5 6 7 26 50 51
StructSpecifier (37)
    on left: 12 13, on right: 11
OptTag (38)
    on left: 14 15, on right: 12
Tag (39)
    on left: 16, on right: 13
VarDec (40)
    on left: 17 18 19, on right: 8 9 18 19 26 56 57
FunDec (41)
    on left: 20 21 22 23, on right: 6
VarList (42)
    on left: 24 25, on right: 20 22 23 24
ParamDec (43)
    on left: 26, on right: 24 25
CompSt (44)
    on left: 27 28 29, on right: 6 35
StmtList (45)
    on left: 30 31, on right: 27 28 29 31
Stmt (46)
    on left: 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47, on right:
    31 38 39 41 42 43 44 45 46
DefList (47)
    on left: 48 49, on right: 12 27 28 29 49
Def (48)
    on left: 50 51 52, on right: 49
DecList (49)
    on left: 53 54 55, on right: 50 54 55
Dec (50)
    on left: 56 57 58, on right: 53 54
Exp (51)
    on left: 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76
    77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92, on right: 32 33
    36 37 38 40 41 43 44 45 47 57 58 59 60 61 62 63 64 65 66 67 68
    69 72 73 77 78 79 80 81 82 83 84 89 90 93 94
Args (52)
    on left: 93 94, on right: 70 93


State 0

    0 $accept: . Program $end

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 2 (ExtDefList)

    Program          go to state 3
    ExtDefList       go to state 4
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


State 1

   10 Specifier: TYPE .

    $default  reduce using rule 10 (Specifier)


State 2

   12 StructSpecifier: STRUCT . OptTag LC DefList RC
   13                | STRUCT . Tag

    ID  shift, and go to state 8

    $default  reduce using rule 14 (OptTag)

    OptTag  go to state 9
    Tag     go to state 10


State 3

    0 $accept: Program . $end

    $end  shift, and go to state 11


State 4

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 5

    3 ExtDefList: ExtDef . ExtDefList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 2 (ExtDefList)

    ExtDefList       go to state 12
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


State 6

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt
    7       | Specifier . error

    error  shift, and go to state 13
    ID     shift, and go to state 14
    SEMI   shift, and go to state 15

    ExtDecList  go to state 16
    VarDec      go to state 17
    FunDec      go to state 18


State 7

   11 Specifier: StructSpecifier .

    $default  reduce using rule 11 (Specifier)


State 8

   15 OptTag: ID .
   16 Tag: ID .

    LC        reduce using rule 15 (OptTag)
    $default  reduce using rule 16 (Tag)


State 9

   12 StructSpecifier: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 19


State 10

   13 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 13 (StructSpecifier)


State 11

    0 $accept: Program $end .

    $default  accept


State 12

    3 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 3 (ExtDefList)


State 13

    7 ExtDef: Specifier error .

    $default  reduce using rule 7 (ExtDef)


State 14

   17 VarDec: ID .
   20 FunDec: ID . LP VarList RP
   21       | ID . LP RP
   22       | ID . error VarList RP
   23       | ID . LP VarList error

    error  shift, and go to state 20
    LP     shift, and go to state 21

    SEMI   reduce using rule 17 (VarDec)
    COMMA  reduce using rule 17 (VarDec)
    LB     reduce using rule 17 (VarDec)


State 15

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 16

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 22


State 17

    8 ExtDecList: VarDec .
    9           | VarDec . COMMA ExtDecList
   18 VarDec: VarDec . LB INT RB
   19       | VarDec . LB error RB

    COMMA  shift, and go to state 23
    LB     shift, and go to state 24

    $default  reduce using rule 8 (ExtDecList)


State 18

    6 ExtDef: Specifier FunDec . CompSt

    error  shift, and go to state 25
    LC     shift, and go to state 26

    CompSt  go to state 27


State 19

   12 StructSpecifier: STRUCT OptTag LC . DefList RC

    error   shift, and go to state 28
    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    RC  reduce using rule 48 (DefList)

    Specifier        go to state 29
    StructSpecifier  go to state 7
    DefList          go to state 30
    Def              go to state 31


State 20

   22 FunDec: ID error . VarList RP

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    Specifier        go to state 32
    StructSpecifier  go to state 7
    VarList          go to state 33
    ParamDec         go to state 34


State 21

   20 FunDec: ID LP . VarList RP
   21       | ID LP . RP
   23       | ID LP . VarList error

    TYPE    shift, and go to state 1
    RP      shift, and go to state 35
    STRUCT  shift, and go to state 2

    Specifier        go to state 32
    StructSpecifier  go to state 7
    VarList          go to state 36
    ParamDec         go to state 34


State 22

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 23

    9 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 37

    ExtDecList  go to state 38
    VarDec      go to state 17


State 24

   18 VarDec: VarDec LB . INT RB
   19       | VarDec LB . error RB

    error  shift, and go to state 39
    INT    shift, and go to state 40


State 25

   28 CompSt: error . DefList StmtList RC

    error   shift, and go to state 28
    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    error   [reduce using rule 48 (DefList)]
    INT     reduce using rule 48 (DefList)
    FLOAT   reduce using rule 48 (DefList)
    ID      reduce using rule 48 (DefList)
    MINUS   reduce using rule 48 (DefList)
    NOT     reduce using rule 48 (DefList)
    LP      reduce using rule 48 (DefList)
    LC      reduce using rule 48 (DefList)
    RC      reduce using rule 48 (DefList)
    RETURN  reduce using rule 48 (DefList)
    IF      reduce using rule 48 (DefList)
    WHILE   reduce using rule 48 (DefList)

    Specifier        go to state 29
    StructSpecifier  go to state 7
    DefList          go to state 41
    Def              go to state 31


State 26

   27 CompSt: LC . DefList StmtList RC
   29       | LC . DefList StmtList error

    error   shift, and go to state 28
    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    error   [reduce using rule 48 (DefList)]
    INT     reduce using rule 48 (DefList)
    FLOAT   reduce using rule 48 (DefList)
    ID      reduce using rule 48 (DefList)
    MINUS   reduce using rule 48 (DefList)
    NOT     reduce using rule 48 (DefList)
    LP      reduce using rule 48 (DefList)
    LC      reduce using rule 48 (DefList)
    RC      reduce using rule 48 (DefList)
    RETURN  reduce using rule 48 (DefList)
    IF      reduce using rule 48 (DefList)
    WHILE   reduce using rule 48 (DefList)

    Specifier        go to state 29
    StructSpecifier  go to state 7
    DefList          go to state 42
    Def              go to state 31


State 27

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


State 28

   52 Def: error . SEMI

    SEMI  shift, and go to state 43


State 29

   50 Def: Specifier . DecList SEMI
   51    | Specifier . error SEMI

    error  shift, and go to state 44
    ID     shift, and go to state 37

    VarDec   go to state 45
    DecList  go to state 46
    Dec      go to state 47


State 30

   12 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 48


State 31

   49 DefList: Def . DefList

    error   shift, and go to state 28
    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    error   [reduce using rule 48 (DefList)]
    INT     reduce using rule 48 (DefList)
    FLOAT   reduce using rule 48 (DefList)
    ID      reduce using rule 48 (DefList)
    MINUS   reduce using rule 48 (DefList)
    NOT     reduce using rule 48 (DefList)
    LP      reduce using rule 48 (DefList)
    LC      reduce using rule 48 (DefList)
    RC      reduce using rule 48 (DefList)
    RETURN  reduce using rule 48 (DefList)
    IF      reduce using rule 48 (DefList)
    WHILE   reduce using rule 48 (DefList)

    Specifier        go to state 29
    StructSpecifier  go to state 7
    DefList          go to state 49
    Def              go to state 31


State 32

   26 ParamDec: Specifier . VarDec

    ID  shift, and go to state 37

    VarDec  go to state 50


State 33

   22 FunDec: ID error VarList . RP

    RP  shift, and go to state 51


State 34

   24 VarList: ParamDec . COMMA VarList
   25        | ParamDec .

    COMMA  shift, and go to state 52

    $default  reduce using rule 25 (VarList)


State 35

   21 FunDec: ID LP RP .

    $default  reduce using rule 21 (FunDec)


State 36

   20 FunDec: ID LP VarList . RP
   23       | ID LP VarList . error

    error  shift, and go to state 53
    RP     shift, and go to state 54


State 37

   17 VarDec: ID .

    $default  reduce using rule 17 (VarDec)


State 38

    9 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 9 (ExtDecList)


State 39

   19 VarDec: VarDec LB error . RB

    RB  shift, and go to state 55


State 40

   18 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 56


State 41

   28 CompSt: error DefList . StmtList RC

    error   shift, and go to state 57
    INT     shift, and go to state 58
    FLOAT   shift, and go to state 59
    ID      shift, and go to state 60
    MINUS   shift, and go to state 61
    NOT     shift, and go to state 62
    LP      shift, and go to state 63
    LC      shift, and go to state 26
    RETURN  shift, and go to state 64
    IF      shift, and go to state 65
    WHILE   shift, and go to state 66

    RC  reduce using rule 30 (StmtList)

    CompSt    go to state 67
    StmtList  go to state 68
    Stmt      go to state 69
    Exp       go to state 70


State 42

   27 CompSt: LC DefList . StmtList RC
   29       | LC DefList . StmtList error

    error   shift, and go to state 57
    INT     shift, and go to state 58
    FLOAT   shift, and go to state 59
    ID      shift, and go to state 60
    MINUS   shift, and go to state 61
    NOT     shift, and go to state 62
    LP      shift, and go to state 63
    LC      shift, and go to state 26
    RETURN  shift, and go to state 64
    IF      shift, and go to state 65
    WHILE   shift, and go to state 66

    error  [reduce using rule 30 (StmtList)]
    RC     reduce using rule 30 (StmtList)

    CompSt    go to state 67
    StmtList  go to state 71
    Stmt      go to state 69
    Exp       go to state 70


State 43

   52 Def: error SEMI .

    $default  reduce using rule 52 (Def)


State 44

   51 Def: Specifier error . SEMI
   55 DecList: error . COMMA DecList
   58 Dec: error . ASSIGNOP Exp

    SEMI      shift, and go to state 72
    COMMA     shift, and go to state 73
    ASSIGNOP  shift, and go to state 74


State 45

   18 VarDec: VarDec . LB INT RB
   19       | VarDec . LB error RB
   56 Dec: VarDec .
   57    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 75
    LB        shift, and go to state 24

    $default  reduce using rule 56 (Dec)


State 46

   50 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 76


State 47

   53 DecList: Dec .
   54        | Dec . COMMA DecList

    COMMA  shift, and go to state 77

    $default  reduce using rule 53 (DecList)


State 48

   12 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 12 (StructSpecifier)


State 49

   49 DefList: Def DefList .

    $default  reduce using rule 49 (DefList)


State 50

   18 VarDec: VarDec . LB INT RB
   19       | VarDec . LB error RB
   26 ParamDec: Specifier VarDec .

    LB  shift, and go to state 24

    $default  reduce using rule 26 (ParamDec)


State 51

   22 FunDec: ID error VarList RP .

    $default  reduce using rule 22 (FunDec)


State 52

   24 VarList: ParamDec COMMA . VarList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    Specifier        go to state 32
    StructSpecifier  go to state 7
    VarList          go to state 78
    ParamDec         go to state 34


State 53

   23 FunDec: ID LP VarList error .

    $default  reduce using rule 23 (FunDec)


State 54

   20 FunDec: ID LP VarList RP .

    $default  reduce using rule 20 (FunDec)


State 55

   19 VarDec: VarDec LB error RB .

    $default  reduce using rule 19 (VarDec)


State 56

   18 VarDec: VarDec LB INT RB .

    $default  reduce using rule 18 (VarDec)


State 57

   28 CompSt: error . DefList StmtList RC
   34 Stmt: error . SEMI
   87 Exp: error . RP
   90    | error . LB Exp RB

    error   shift, and go to state 28
    SEMI    shift, and go to state 79
    TYPE    shift, and go to state 1
    RP      shift, and go to state 80
    LB      shift, and go to state 81
    STRUCT  shift, and go to state 2

    error   [reduce using rule 48 (DefList)]
    INT     reduce using rule 48 (DefList)
    FLOAT   reduce using rule 48 (DefList)
    ID      reduce using rule 48 (DefList)
    MINUS   reduce using rule 48 (DefList)
    NOT     reduce using rule 48 (DefList)
    LP      reduce using rule 48 (DefList)
    LC      reduce using rule 48 (DefList)
    RC      reduce using rule 48 (DefList)
    RETURN  reduce using rule 48 (DefList)
    IF      reduce using rule 48 (DefList)
    WHILE   reduce using rule 48 (DefList)

    Specifier        go to state 29
    StructSpecifier  go to state 7
    DefList          go to state 41
    Def              go to state 31


State 58

   75 Exp: INT .

    $default  reduce using rule 75 (Exp)


State 59

   76 Exp: FLOAT .

    $default  reduce using rule 76 (Exp)


State 60

   70 Exp: ID . LP Args RP
   71    | ID . LP RP
   74    | ID .
   91    | ID . error
   92    | ID . LP error

    error  shift, and go to state 82
    LP     shift, and go to state 83

    error     [reduce using rule 74 (Exp)]
    SEMI      reduce using rule 74 (Exp)
    COMMA     reduce using rule 74 (Exp)
    ASSIGNOP  reduce using rule 74 (Exp)
    RELOP     reduce using rule 74 (Exp)
    PLUS      reduce using rule 74 (Exp)
    MINUS     reduce using rule 74 (Exp)
    STAR      reduce using rule 74 (Exp)
    DIV       reduce using rule 74 (Exp)
    AND       reduce using rule 74 (Exp)
    OR        reduce using rule 74 (Exp)
    DOT       reduce using rule 74 (Exp)
    RP        reduce using rule 74 (Exp)
    LB        reduce using rule 74 (Exp)
    RB        reduce using rule 74 (Exp)


State 61

   68 Exp: MINUS . Exp
   85    | MINUS . error

    error  shift, and go to state 84
    INT    shift, and go to state 58
    FLOAT  shift, and go to state 59
    ID     shift, and go to state 60
    MINUS  shift, and go to state 61
    NOT    shift, and go to state 62
    LP     shift, and go to state 63

    Exp  go to state 85


State 62

   69 Exp: NOT . Exp
   86    | NOT . error

    error  shift, and go to state 86
    INT    shift, and go to state 58
    FLOAT  shift, and go to state 59
    ID     shift, and go to state 60
    MINUS  shift, and go to state 61
    NOT    shift, and go to state 62
    LP     shift, and go to state 63

    Exp  go to state 87


State 63

   67 Exp: LP . Exp RP
   88    | LP . error

    error  shift, and go to state 88
    INT    shift, and go to state 58
    FLOAT  shift, and go to state 59
    ID     shift, and go to state 60
    MINUS  shift, and go to state 61
    NOT    shift, and go to state 62
    LP     shift, and go to state 63

    Exp  go to state 89


State 64

   36 Stmt: RETURN . Exp SEMI
   37     | RETURN . Exp error

    error  shift, and go to state 90
    INT    shift, and go to state 58
    FLOAT  shift, and go to state 59
    ID     shift, and go to state 60
    MINUS  shift, and go to state 61
    NOT    shift, and go to state 62
    LP     shift, and go to state 63

    Exp  go to state 91


State 65

   38 Stmt: IF . LP Exp RP Stmt
   39     | IF . LP error RP Stmt
   40     | IF . LP Exp RP error
   41     | IF . LP Exp RP Stmt ELSE Stmt
   42     | IF . LP error RP Stmt ELSE Stmt
   43     | IF . LP Exp RP error ELSE Stmt
   44     | IF . LP Exp RP Stmt ELSE error

    LP  shift, and go to state 92


State 66

   45 Stmt: WHILE . LP Exp RP Stmt
   46     | WHILE . LP error RP Stmt
   47     | WHILE . LP Exp RP error

    LP  shift, and go to state 93


State 67

   35 Stmt: CompSt .

    $default  reduce using rule 35 (Stmt)


State 68

   28 CompSt: error DefList StmtList . RC

    RC  shift, and go to state 94


State 69

   31 StmtList: Stmt . StmtList

    error   shift, and go to state 57
    INT     shift, and go to state 58
    FLOAT   shift, and go to state 59
    ID      shift, and go to state 60
    MINUS   shift, and go to state 61
    NOT     shift, and go to state 62
    LP      shift, and go to state 63
    LC      shift, and go to state 26
    RETURN  shift, and go to state 64
    IF      shift, and go to state 65
    WHILE   shift, and go to state 66

    error  [reduce using rule 30 (StmtList)]
    RC     reduce using rule 30 (StmtList)

    CompSt    go to state 67
    StmtList  go to state 95
    Stmt      go to state 69
    Exp       go to state 70


State 70

   32 Stmt: Exp . SEMI
   33     | Exp . error
   59 Exp: Exp . ASSIGNOP Exp
   60    | Exp . AND Exp
   61    | Exp . OR Exp
   62    | Exp . RELOP Exp
   63    | Exp . PLUS Exp
   64    | Exp . MINUS Exp
   65    | Exp . STAR Exp
   66    | Exp . DIV Exp
   72    | Exp . LB Exp RB
   73    | Exp . DOT ID
   77    | Exp . ASSIGNOP error
   78    | Exp . AND error
   79    | Exp . OR error
   80    | Exp . RELOP error
   81    | Exp . PLUS error
   82    | Exp . MINUS error
   83    | Exp . STAR error
   84    | Exp . DIV error
   89    | Exp . LB error RB

    error     shift, and go to state 96
    SEMI      shift, and go to state 97
    ASSIGNOP  shift, and go to state 98
    RELOP     shift, and go to state 99
    PLUS      shift, and go to state 100
    MINUS     shift, and go to state 101
    STAR      shift, and go to state 102
    DIV       shift, and go to state 103
    AND       shift, and go to state 104
    OR        shift, and go to state 105
    DOT       shift, and go to state 106
    LB        shift, and go to state 107


State 71

   27 CompSt: LC DefList StmtList . RC
   29       | LC DefList StmtList . error

    error  shift, and go to state 108
    RC     shift, and go to state 109


State 72

   51 Def: Specifier error SEMI .

    $default  reduce using rule 51 (Def)


State 73

   55 DecList: error COMMA . DecList

    error  shift, and go to state 110
    ID     shift, and go to state 37

    VarDec   go to state 45
    DecList  go to state 111
    Dec      go to state 47


State 74

   58 Dec: error ASSIGNOP . Exp

    error  shift, and go to state 90
    INT    shift, and go to state 58
    FLOAT  shift, and go to state 59
    ID     shift, and go to state 60
    MINUS  shift, and go to state 61
    NOT    shift, and go to state 62
    LP     shift, and go to state 63

    Exp  go to state 112


State 75

   57 Dec: VarDec ASSIGNOP . Exp

    error  shift, and go to state 90
    INT    shift, and go to state 58
    FLOAT  shift, and go to state 59
    ID     shift, and go to state 60
    MINUS  shift, and go to state 61
    NOT    shift, and go to state 62
    LP     shift, and go to state 63

    Exp  go to state 113


State 76

   50 Def: Specifier DecList SEMI .

    $default  reduce using rule 50 (Def)


State 77

   54 DecList: Dec COMMA . DecList

    error  shift, and go to state 110
    ID     shift, and go to state 37

    VarDec   go to state 45
    DecList  go to state 114
    Dec      go to state 47


State 78

   24 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 24 (VarList)


State 79

   34 Stmt: error SEMI .

    $default  reduce using rule 34 (Stmt)


State 80

   87 Exp: error RP .

    $default  reduce using rule 87 (Exp)


State 81

   90 Exp: error LB . Exp RB

    error  shift, and go to state 90
    INT    shift, and go to state 58
    FLOAT  shift, and go to state 59
    ID     shift, and go to state 60
    MINUS  shift, and go to state 61
    NOT    shift, and go to state 62
    LP     shift, and go to state 63

    Exp  go to state 115


State 82

   91 Exp: ID error .

    $default  reduce using rule 91 (Exp)


State 83

   70 Exp: ID LP . Args RP
   71    | ID LP . RP
   92    | ID LP . error

    error  shift, and go to state 116
    INT    shift, and go to state 58
    FLOAT  shift, and go to state 59
    ID     shift, and go to state 60
    MINUS  shift, and go to state 61
    NOT    shift, and go to state 62
    LP     shift, and go to state 63
    RP     shift, and go to state 117

    Exp   go to state 118
    Args  go to state 119


State 84

   85 Exp: MINUS error .
   87    | error . RP
   90    | error . LB Exp RB

    RP  shift, and go to state 80
    LB  shift, and go to state 81

    RP        [reduce using rule 85 (Exp)]
    LB        [reduce using rule 85 (Exp)]
    $default  reduce using rule 85 (Exp)


State 85

   59 Exp: Exp . ASSIGNOP Exp
   60    | Exp . AND Exp
   61    | Exp . OR Exp
   62    | Exp . RELOP Exp
   63    | Exp . PLUS Exp
   64    | Exp . MINUS Exp
   65    | Exp . STAR Exp
   66    | Exp . DIV Exp
   68    | MINUS Exp .
   72    | Exp . LB Exp RB
   73    | Exp . DOT ID
   77    | Exp . ASSIGNOP error
   78    | Exp . AND error
   79    | Exp . OR error
   80    | Exp . RELOP error
   81    | Exp . PLUS error
   82    | Exp . MINUS error
   83    | Exp . STAR error
   84    | Exp . DIV error
   89    | Exp . LB error RB

    STAR  shift, and go to state 102
    DIV   shift, and go to state 103
    DOT   shift, and go to state 106
    LB    shift, and go to state 107

    $default  reduce using rule 68 (Exp)


State 86

   86 Exp: NOT error .
   87    | error . RP
   90    | error . LB Exp RB

    RP  shift, and go to state 80
    LB  shift, and go to state 81

    RP        [reduce using rule 86 (Exp)]
    LB        [reduce using rule 86 (Exp)]
    $default  reduce using rule 86 (Exp)


State 87

   59 Exp: Exp . ASSIGNOP Exp
   60    | Exp . AND Exp
   61    | Exp . OR Exp
   62    | Exp . RELOP Exp
   63    | Exp . PLUS Exp
   64    | Exp . MINUS Exp
   65    | Exp . STAR Exp
   66    | Exp . DIV Exp
   69    | NOT Exp .
   72    | Exp . LB Exp RB
   73    | Exp . DOT ID
   77    | Exp . ASSIGNOP error
   78    | Exp . AND error
   79    | Exp . OR error
   80    | Exp . RELOP error
   81    | Exp . PLUS error
   82    | Exp . MINUS error
   83    | Exp . STAR error
   84    | Exp . DIV error
   89    | Exp . LB error RB

    DOT  shift, and go to state 106
    LB   shift, and go to state 107

    $default  reduce using rule 69 (Exp)


State 88

   87 Exp: error . RP
   88    | LP error .
   90    | error . LB Exp RB

    RP  shift, and go to state 80
    LB  shift, and go to state 81

    RP        [reduce using rule 88 (Exp)]
    LB        [reduce using rule 88 (Exp)]
    $default  reduce using rule 88 (Exp)


State 89

   59 Exp: Exp . ASSIGNOP Exp
   60    | Exp . AND Exp
   61    | Exp . OR Exp
   62    | Exp . RELOP Exp
   63    | Exp . PLUS Exp
   64    | Exp . MINUS Exp
   65    | Exp . STAR Exp
   66    | Exp . DIV Exp
   67    | LP Exp . RP
   72    | Exp . LB Exp RB
   73    | Exp . DOT ID
   77    | Exp . ASSIGNOP error
   78    | Exp . AND error
   79    | Exp . OR error
   80    | Exp . RELOP error
   81    | Exp . PLUS error
   82    | Exp . MINUS error
   83    | Exp . STAR error
   84    | Exp . DIV error
   89    | Exp . LB error RB

    ASSIGNOP  shift, and go to state 98
    RELOP     shift, and go to state 99
    PLUS      shift, and go to state 100
    MINUS     shift, and go to state 101
    STAR      shift, and go to state 102
    DIV       shift, and go to state 103
    AND       shift, and go to state 104
    OR        shift, and go to state 105
    DOT       shift, and go to state 106
    RP        shift, and go to state 120
    LB        shift, and go to state 107


State 90

   87 Exp: error . RP
   90    | error . LB Exp RB

    RP  shift, and go to state 80
    LB  shift, and go to state 81


State 91

   36 Stmt: RETURN Exp . SEMI
   37     | RETURN Exp . error
   59 Exp: Exp . ASSIGNOP Exp
   60    | Exp . AND Exp
   61    | Exp . OR Exp
   62    | Exp . RELOP Exp
   63    | Exp . PLUS Exp
   64    | Exp . MINUS Exp
   65    | Exp . STAR Exp
   66    | Exp . DIV Exp
   72    | Exp . LB Exp RB
   73    | Exp . DOT ID
   77    | Exp . ASSIGNOP error
   78    | Exp . AND error
   79    | Exp . OR error
   80    | Exp . RELOP error
   81    | Exp . PLUS error
   82    | Exp . MINUS error
   83    | Exp . STAR error
   84    | Exp . DIV error
   89    | Exp . LB error RB

    error     shift, and go to state 121
    SEMI      shift, and go to state 122
    ASSIGNOP  shift, and go to state 98
    RELOP     shift, and go to state 99
    PLUS      shift, and go to state 100
    MINUS     shift, and go to state 101
    STAR      shift, and go to state 102
    DIV       shift, and go to state 103
    AND       shift, and go to state 104
    OR        shift, and go to state 105
    DOT       shift, and go to state 106
    LB        shift, and go to state 107


State 92

   38 Stmt: IF LP . Exp RP Stmt
   39     | IF LP . error RP Stmt
   40     | IF LP . Exp RP error
   41     | IF LP . Exp RP Stmt ELSE Stmt
   42     | IF LP . error RP Stmt ELSE Stmt
   43     | IF LP . Exp RP error ELSE Stmt
   44     | IF LP . Exp RP Stmt ELSE error

    error  shift, and go to state 123
    INT    shift, and go to state 58
    FLOAT  shift, and go to state 59
    ID     shift, and go to state 60
    MINUS  shift, and go to state 61
    NOT    shift, and go to state 62
    LP     shift, and go to state 63

    Exp  go to state 124


State 93

   45 Stmt: WHILE LP . Exp RP Stmt
   46     | WHILE LP . error RP Stmt
   47     | WHILE LP . Exp RP error

    error  shift, and go to state 125
    INT    shift, and go to state 58
    FLOAT  shift, and go to state 59
    ID     shift, and go to state 60
    MINUS  shift, and go to state 61
    NOT    shift, and go to state 62
    LP     shift, and go to state 63

    Exp  go to state 126


State 94

   28 CompSt: error DefList StmtList RC .

    $default  reduce using rule 28 (CompSt)


State 95

   31 StmtList: Stmt StmtList .

    $default  reduce using rule 31 (StmtList)


State 96

   33 Stmt: Exp error .

    $default  reduce using rule 33 (Stmt)


State 97

   32 Stmt: Exp SEMI .
